--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 
 dependencies {
 	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 	annotationProcessor('org.projectlombok:lombok')
 	testAnnotationProcessor('org.projectlombok:lombok')
 	implementation('org.springframework.boot:spring-boot-starter-web')
