--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 	jcenter()
 }
 
+jar {
+	enabled = false
+}
+
 dependencies {
 	testImplementation 'junit:junit:4.13.1'
 	annotationProcessor('org.projectlombok:lombok')
