--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
