--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	implementation('org.projectlombok:lombok')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-mustache')
-	//implementation('com.h2database:h2')
+	implementation('com.h2database:h2')
 	implementation('org.springframework.session:spring-session-jdbc:2.1.6.RELEASE')
 	implementation('org.mariadb.jdbc:mariadb-java-client')
 	implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
