--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,13 +1,13 @@
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
 #Test OAuth
 spring.security.oauth2.client.registration.google.client-id=test
