--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:~/test;MODE=MYSQL
 
-#spring.datasource.url=jdbc:h2:~/test;
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
 spring.profiles.include=oauth
