--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+spring.jpa.show_sql=true
 spring.h2.console.enabled=true
+spring.session.store-type=jdbc
 spring.h2.console.path=/h2-console
 spring.datasource.hikari.jdbc-url=jdbc:h2:~/test;MODE=MYSQL
 
