--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
 spring.h2.console.path=/h2-console
-spring.datasource.hikari.jdbc-url=jdbc:h2:~/test;MODE=MYSQL
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
