--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.jpa.show_sql=true
-spring.h2.console.enabled=true
-spring.session.store-type=jdbc
-spring.h2.console.path=/h2-console
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
-
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+#spring.jpa.show_sql=true
+#spring.h2.console.enabled=true
+#spring.session.store-type=jdbc
+#spring.h2.console.path=/h2-console
+#
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#
+#spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
 spring.profiles.include=oauth
