--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,8 +5,8 @@ spring.session.store-type=jdbc
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
 #Test OAuth
 spring.security.oauth2.client.registration.google.client-id=test
