--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,3 +1,5 @@
+spring.config.activate.on-profile=real
+
 spring.profiles.include=oauth,real-db
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
