--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,4 +1,4 @@
-spring.config.activate.on-profile=real
+spring.profiles.active=real
 
 spring.profiles.include=oauth,real-db
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
