--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
-spring.h2.console.path=/h2-console
-spring.profiles.include=oauth
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+#spring.h2.console.path=/h2-console
+#spring.profiles.include=oauth
 
 spring.jpa.show_sql=true
 spring.session.store-type=jdbc
